--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Angular 2 QuickStart</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/main.css">
     <!-- 1. Load libraries -->
     <!-- IE required polyfills, in this exact order -->
     <script src="lib/es6-shim/es6-shim.min.js"></script>
@@ -12,6 +12,7 @@
     <script src="lib/systemjs/dist/system.src.js"></script>
     <script src="lib/rxjs/bundles/Rx.js"></script>
     <script src="lib/angular2/bundles/angular2.dev.js"></script>
+    <script src="lib/angular2/bundles/router.dev.js"></script>
     <script src="//code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
     <script src="lib/bootstrap-sass/assets/javascripts/bootstrap.min.js"></script>
     <!-- 2. Configure SystemJS -->
